# Tubes2_AI_JojoCuriBerkas

./: README.md  pyproject.toml
src/: IF3170 Artificial Intelligence - Tugas Besar 2 Notebook Template.ipynb  IF3170 Artificial Intelligence | Tugas Besar 2 Notebook Template.ipynb  submission.csv
src/Algorithm/: ID3.py  KNearestN.py  NaiveBayes.py
