[project]
name = "tubes2-ai-jojocuriberkas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "miceforest>=6.0.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
